Added Some checks

--- a/failure.html
+++ b/failure.html
@@ -11,8 +11,8 @@
 <body>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Brilliant!</h1>
-          <p class="lead">You are all set up to my Newsletter.</p>
+          <h1 class="display-4">Failure</h1>
+          <p class="lead">Sorry ,There was some Problem. </p>
           <form action="/failure" method="POST">
             <button class ="btn btn-lg btn-warning"type="submit">Try Again</button>
         </form>
